[gd_scene load_steps=9 format=3 uid="uid://c2puurpqryu8j"]

[ext_resource type="Script" uid="uid://42v837fkdqcg" path="res://Assets/Scripts/Towers/Laser.gd" id="1_78jbl"]
[ext_resource type="PackedScene" uid="uid://cro04y024dvii" path="res://Assets/Shaders/end_particles.tscn" id="2_0wpyy"]
[ext_resource type="PackedScene" uid="uid://chv7fu7pnloo8" path="res://Assets/Shaders/beam_particles.tscn" id="3_yq50c"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7vjml"]
resource_local_to_scene = true
flip_faces = true
top_radius = 0.03
bottom_radius = 0.03
height = 0.01
radial_segments = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7vjml"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kk7t0"]
resource_local_to_scene = true
height = 0.01
radius = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jiokq"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 0, 0, 0.5019608)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ggvd"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 0, 0, 0.5019608)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Laser" type="RayCast3D"]
target_position = Vector3(0, 1, 0)
collision_mask = 4
hit_back_faces = false
collide_with_areas = true
script = ExtResource("1_78jbl")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_7vjml")
surface_material_override/0 = SubResource("StandardMaterial3D_7vjml")

[node name="AreaOfEffect" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaOfEffect"]
shape = SubResource("CylinderShape3D_kk7t0")

[node name="EndParticles" parent="." instance=ExtResource("2_0wpyy")]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_jiokq")

[node name="BeamParticles" parent="." instance=ExtResource("3_yq50c")]
transform = Transform3D(-1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 0, 0, 1, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_3ggvd")
